--- a/assignment/index.html
+++ b/assignment/index.html
@@ -29,7 +29,7 @@
       </ul>
     <!-- Create a footer element -->
 <footer>
-    <p>"“As a culture worker who belongs to an oppressed people my job is to make revolution irresistible.”</p>
+    <p>"“As a culture worker who belongs to an oppressed people my job is to make revolution irresistible.” -Toni Cade Bambara</p>
 </footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
