--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="helloWorld.js"></script>
 </head>
 
 
@@ -29,7 +30,7 @@
       </ul>
     <!-- Create a footer element -->
 <footer>
-    <p>"“As a culture worker who belongs to an oppressed people my job is to make revolution irresistible.” -Toni Cade Bambara</p>
+    <p>“As a culture worker who belongs to an oppressed people my job is to make revolution irresistible.” -Toni Cade Bambara</p>
 </footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
